@@ -9,6 +9,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ***  Add configure options for cc warnings and extended tests.  [Ruben Diez]
 
+***  Add -Wall reporting ASSIGNDLY on assignment delays.  [Ruben Diez]
+
 ***  Fix UNDRIVEN warnings inside DPI import functions.  [Ruben Diez]
 
 ***  Fix --help output to go to stderr, not stdout, bug397.  [Ruben Diez]
